fixed the sumbit btn on small device
Relates #28

--- a/stylesheet/homepage.css
+++ b/stylesheet/homepage.css
@@ -70,11 +70,12 @@
 
 .search-btn {
   width: fit-content;
-  padding: 15px;
-  font-size: 17px;
+  padding: 10px;
+  font-size: 15px;
   margin-left: 20px;
   border-radius: 5px;
   cursor: pointer;
+  width: fit-content;
   
 }
 .search-btn:hover {
@@ -89,7 +90,7 @@
 }
 @media only screen and (max-width: 600px) {
   .homepage__search {
-    width: 100%;
+    width: 80%;
     padding: 0.5rem;
     padding-left: 0rem;
     text-align: center;
